# ml-study

./: .gitignore  .pre-commit-config.yaml  car_price.py  carvana_cars.csv
.github/workflows/: scrape.yml
car_price_predictor/: pyproject.toml
car_price_predictor/src/: carvana_prices.py
car_price_predictor/src/car_price_predictor/: __init__.py  car_price.py  cli.py
car_price_predictor/tests/: test_car_price.py
mlbookcamp/car_price_predictor/: pyproject.toml
mlbookcamp/car_price_predictor/src/car_price_predictor/: frontend.py
mlops-zoomcamp/: requirements.txt
mlops-zoomcamp/01-intro/: README.md  homework.ipynb  homework.md  requirements.txt
mlops-zoomcamp/02-experiment-tracking/: homework.md
